--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,9 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = baikeSpider.settings
+default = encyclopediaCrawler.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = baikeSpider
+project = encyclopediaCrawler
+
